--- a/templates/relatorio.html
+++ b/templates/relatorio.html
@@ -13,6 +13,9 @@
         <a href="{% url 'salas_view' %}" class="btn btn-secondary">
             <i class="fas fa-arrow-left"></i> Voltar
         </a>
+        <a href="{% url 'logout_relatorio_view' %}" class="btn btn-danger">
+            <i class="fas fa-sign-out-alt"></i> Sair
+        </a>
     </div>
 
     <div class="filter-section">
