--- a/templates/registro.html
+++ b/templates/registro.html
@@ -151,6 +151,9 @@
                             <label class="radio-label">
                                 <input type="radio" name="modal_portas" value="N"> NÃO
                             </label>
+                            <label class="radio-label">
+                                <input type="radio" name="modal_portas" value="NA"> NA
+                            </label>
                         </div>
                     </div>
 
@@ -162,6 +165,9 @@
                             </label>
                             <label class="radio-label">
                                 <input type="radio" name="modal_teto" value="N"> NÃO
+                            </label>
+                            <label class="radio-label">
+                                <input type="radio" name="modal_teto" value="NA"> NA
                             </label>
                         </div>
                     </div>
@@ -175,6 +181,9 @@
                             <label class="radio-label">
                                 <input type="radio" name="modal_paredes" value="N"> NÃO
                             </label>
+                            <label class="radio-label">
+                                <input type="radio" name="modal_paredes" value="NA"> NA
+                            </label>
                         </div>
                     </div>
 
@@ -186,6 +195,9 @@
                             </label>
                             <label class="radio-label">
                                 <input type="radio" name="modal_janelas" value="N"> NÃO
+                            </label>
+                            <label class="radio-label">
+                                <input type="radio" name="modal_janelas" value="NA"> NA
                             </label>
                         </div>
                     </div>
@@ -199,6 +211,9 @@
                             <label class="radio-label">
                                 <input type="radio" name="modal_piso" value="N"> NÃO
                             </label>
+                            <label class="radio-label">
+                                <input type="radio" name="modal_piso" value="NA"> NA
+                            </label>
                         </div>
                     </div>
 
@@ -211,6 +226,9 @@
                             <label class="radio-label">
                                 <input type="radio" name="modal_superficie_mobiliario" value="N"> NÃO
                             </label>
+                            <label class="radio-label">
+                                <input type="radio" name="modal_superficie_mobiliario" value="NA"> NA
+                            </label>
                         </div>
                     </div>
 
@@ -222,6 +240,9 @@
                             </label>
                             <label class="radio-label">
                                 <input type="radio" name="modal_dispenser" value="N"> NÃO
+                            </label>
+                            <label class="radio-label">
+                                <input type="radio" name="modal_dispenser" value="NA"> NA
                             </label>
                         </div>
                     </div>
