--- a/templates/relatorio.html
+++ b/templates/relatorio.html
@@ -316,6 +316,9 @@
                     <label class="radio-label">
                         <input type="radio" name="modal_portas" value="N"> NÃO
                     </label>
+                    <label class="radio-label">
+                        <input type="radio" name="modal_portas" value="NA"> NA
+                    </label>
                 </div>
             </div>
             <div class="item-limpeza">
@@ -326,6 +329,9 @@
                     </label>
                     <label class="radio-label">
                         <input type="radio" name="modal_teto" value="N"> NÃO
+                    </label>
+                    <label class="radio-label">
+                        <input type="radio" name="modal_teto" value="NA"> NA
                     </label>
                 </div>
             </div>
@@ -338,6 +344,9 @@
                     <label class="radio-label">
                         <input type="radio" name="modal_paredes" value="N"> NÃO
                     </label>
+                    <label class="radio-label">
+                        <input type="radio" name="modal_paredes" value="NA"> NA
+                    </label>
                 </div>
             </div>
             <div class="item-limpeza">
@@ -348,6 +357,9 @@
                     </label>
                     <label class="radio-label">
                         <input type="radio" name="modal_janelas" value="N"> NÃO
+                    </label>
+                    <label class="radio-label">
+                        <input type="radio" name="modal_janelas" value="NA"> NA
                     </label>
                 </div>
             </div>
@@ -360,6 +372,9 @@
                     <label class="radio-label">
                         <input type="radio" name="modal_piso" value="N"> NÃO
                     </label>
+                    <label class="radio-label">
+                        <input type="radio" name="modal_piso" value="NA"> NA
+                    </label>
                 </div>
             </div>
             <div class="item-limpeza">
@@ -371,6 +386,9 @@
                     <label class="radio-label">
                         <input type="radio" name="modal_superficie_mobiliario" value="N"> NÃO
                     </label>
+                    <label class="radio-label">
+                        <input type="radio" name="modal_superficie_mobiliario" value="NA"> NA
+                    </label>
                 </div>
             </div>
             <div class="item-limpeza">
@@ -381,6 +399,9 @@
                     </label>
                     <label class="radio-label">
                         <input type="radio" name="modal_dispenser" value="N"> NÃO
+                    </label>
+                    <label class="radio-label">
+                        <input type="radio" name="modal_dispenser" value="NA"> NA
                     </label>
                 </div>
             </div>
@@ -801,7 +822,7 @@
             radios.forEach(radio => {
                 radio.checked = radio.value === valor;
             });
-            if ((valor === 'S' || valor === 'N') && radios.length) {
+            if (['S', 'N', 'NA'].includes(valor) && radios.length) {
                 const itemDiv = radios[0].closest('.item-limpeza');
                 if (itemDiv) {
                     itemDiv.classList.add('completo');
@@ -830,7 +851,7 @@
         const itens = itensPorTipo[tipo];
         const preenchidos = itens.every(chave => {
             const valor = (currentRegistroData[chave] || '').toString().toUpperCase();
-            return valor === 'S' || valor === 'N';
+            return ['S', 'N', 'NA'].includes(valor);
         });
         if (preenchidos) {
             contador.textContent = `${itens.length}/${itens.length}`;
