corrido o problema de setar criticidade para concorrente e ajustes visuais na tela de sucesso

--- a/static/css/sucesso.css
+++ b/static/css/sucesso.css
@@ -3,6 +3,7 @@
     padding: 50px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 4px solid #28a745;
 }
 .timer {
     font-size: 3rem;
